--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>CatPhotoApp</h1>
         <h2>Cat Photos</h2>
         <p>See more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a> in our gallery</p>
-        <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+        <a href="https://freecatphotoapp.com"><img src="https://i.pinimg.com/736x/d9/5f/cb/d95fcbb3fd16419bbc7f56b24e6f678c.jpg" alt="A cute orange cat lying on its back."></a>
     </header>
     <main>
         <h2>Cat Lists</h2>
@@ -23,7 +23,7 @@
                 <li>lasagna</li>
             </ul>
             <figure>
-                <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
+                <img src="https://images.unsplash.com/photo-1582769923195-c6e60dc1d8dc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE4fHx8ZW58MHx8fHx8&w=1000&q=80" alt="A slice of lasagna on a plate.">
                 <figcaption>Cats <em>love</em> lasagna.</figcaption>
             </figure>
         </section>
@@ -35,8 +35,8 @@
                 <li>other cats</li>
             </ol>
             <figure>
-                <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
-                <figcaption>Cats <strong>hates</strong> other cats.</figcaption>
+                <img src="https://www.shutterstock.com/image-photo/cute-ginger-cat-on-purple-600nw-2351898327.jpg" alt="Five cats looking around a field.">
+                <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
             </figure>
         </section>
         <section>
