--- a/index.html
+++ b/index.html
@@ -15,30 +15,32 @@
     </header>
     <main>
         <h2>Cat Lists</h2>
-        <section>
-            <h3>Things cats love:</h3>
-            <ul>
-                <li>cat nip</li>
-                <li>laser pointers</li>
-                <li>lasagna</li>
-            </ul>
-            <figure>
-                <img src="https://images.unsplash.com/photo-1582769923195-c6e60dc1d8dc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE4fHx8ZW58MHx8fHx8&w=1000&q=80" alt="A slice of lasagna on a plate.">
-                <figcaption>Cats <em>love</em> lasagna.</figcaption>
-            </figure>
-        </section>
-        <section>
-            <h3>Top 3 things cats hate:</h3>
-            <ol>
-                <li>flea treatment</li>
-                <li>thunder</li>
-                <li>other cats</li>
-            </ol>
-            <figure>
-                <img src="https://www.shutterstock.com/image-photo/cute-ginger-cat-on-purple-600nw-2351898327.jpg" alt="Five cats looking around a field.">
-                <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
-            </figure>
-        </section>
+        <div class="lists">
+            <section>
+                <h3>Things cats love:</h3>
+                <ul>
+                    <li>cat nip</li>
+                    <li>laser pointers</li>
+                    <li>lasagna</li>
+                </ul>
+                <figure>
+                    <img src="https://images.unsplash.com/photo-1582769923195-c6e60dc1d8dc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE4fHx8ZW58MHx8fHx8&w=1000&q=80" alt="A slice of lasagna on a plate.">
+                    <figcaption>Cats <em>love</em> lasagna.</figcaption>
+                </figure>
+            </section>
+            <section>
+                <h3>Top 3 things cats hate:</h3>
+                <ol>
+                    <li>flea treatment</li>
+                    <li>thunder</li>
+                    <li>other cats</li>
+                </ol>
+                <figure>
+                    <img src="https://www.shutterstock.com/image-photo/cute-ginger-cat-on-purple-600nw-2351898327.jpg" alt="Five cats looking around a field.">
+                    <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
+                </figure>
+            </section>
+        </div>
         <section>
             <h2>Cat Form</h2>
             <form action="#">
